# bsprof

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release-deb.yml  rust.yml
bsprof/: bsprof.py
src/: args.rs  cmd.rs  info.rs  main.rs  profile.rs  report.rs
src/profile/: info.rs  rusage.rs
tools/: profile.sh  profile_report.py
tools/genreport/: genreport.py  requirements.txt
