[package]
name = "bsprof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
libc = "0.2.140"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sysinfo = "0.28.2"
